<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinTools</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button_text">Calculate</string>
    <string name="enter_number_hint">Enter value</string>
    <string name="header_text">CPI  Inflation Calculator</string>
    <string name="in_textView_text">in</string>
    <string name="buyingPower_textView_text">Has the same buying power as</string>
    
    <string-array name="years_array">
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>       
    </string-array>
    
    <color name="red">#FF0000</color>
    <color name="onehundredGreen">#86C67C</color>
    

</resources>
