<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        
         >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:weightSum="3"
            android:background="@color/onehundredGreen"
            >
    
    <TextView
        android:id="@+id/header_textField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/header_text"
        android:textSize="25sp"
        android:gravity="top|center"
        android:layout_gravity="center"
        android:layout_weight="3"
        
        />
    
    </TableRow>
        
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"            
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
    
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"/>
    
    <EditText
        android:id="@+id/enter_number_textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enter_number_hint"
        android:layout_weight="1.1"
        android:gravity="center"        
        />
    
     <TextView 
         		android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"/>
    
    </TableRow>
    
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"            
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
     
     		<TextView
     		    android:layout_height="wrap_content"
     		    android:layout_weight="1" 
     		    android:layout_width="0dp"/>
            
            <TextView
                android:id="@+id/in_textView1"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/in_textView_text" />
            
            <Spinner
    			android:id="@+id/startdate_spinner"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:gravity="center"
    			android:layout_weight="0.66"/>
            
              <TextView
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_width="0dp" />
              
            </TableRow>
            
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"            
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
              
            
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
    
            
            <TextView
                android:id="@+id/buyingPower_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/buyingPower_textView_text"
                android:gravity="center"
                android:layout_weight="1"/>
            
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            
            </TableRow>
            
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"           
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
              
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.8"/>
    
            
            <TextView
                android:id="@+id/totalCPIDecimal_textView"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1.4"/>
            
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.8"/>
            
            </TableRow>
            
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"            
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
              
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
    
            
            <TextView
                 android:id="@+id/in_textView2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/in_textView_text"
                android:gravity="center"
                android:layout_weight="0.33"/>
            
            
            
            <Spinner
    			android:id="@+id/enddate_spinner"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:gravity="center"
    			android:layout_weight="0.66"/> 
    			
            
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            
            </TableRow>
            
        
        
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
              
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
    
            
            <TextView
                android:id="@+id/totalCPIPercent_textView"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"/>
            
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            
            </TableRow>
            
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"            
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
              
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
    
            
            <Button 
                android:id="@+id/submit_button"
    			android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:text="@string/submit_button_text"
    			android:gravity="center"
    			android:layout_weight="1"   />
            
              <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            
            </TableRow>
            
</TableLayout>